<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_coordinate_distance"
        android:layout_gravity="top"
        android:gravity="top"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#3498db"
        android:layout_marginBottom="150dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1st_coordinates"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:typeface="monospace"/>
        <Button
            android:id="@+id/btn_first_paste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button_color"
            android:layout_marginLeft="190dp"
            android:text="@string/paste"
            android:textColor="@color/button_text_color"
            android:layout_marginStart="190dp" />
    </LinearLayout>
    <EditText
        android:id="@+id/edit_first_coordinates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:hint="@string/latitude1_longitude1"
        android:typeface="monospace"
        android:inputType="text"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2nd_coordinates"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:typeface="monospace"/>
        <Button
            android:id="@+id/btn_second_paste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button_color"
            android:layout_marginLeft="190dp"
            android:text="@string/paste"
            android:textColor="@color/button_text_color"
            android:layout_marginStart="190dp" />
    </LinearLayout>
    <EditText
        android:id="@+id/edit_second_coordinates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:hint="@string/latitude2_longitude2"
        android:typeface="monospace"
        android:inputType="text"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/btn_calculate_cooldown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button_color"
            android:textColor="@color/button_text_color"
            android:text="@string/calculate_cooldown"
            style="?android:attr/borderlessButtonStyle"
            android:padding="15dp"/>
        <Button
            android:id="@+id/btn_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#d11a2a"
            android:textColor="#FFFFFF"
            android:text="@string/format"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginLeft="135dp"
            android:padding="15dp"
            android:layout_marginStart="135dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_distance"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:typeface="monospace"/>
        <TextView
            android:id="@+id/text_total_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:typeface="monospace"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cooldown_time"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:typeface="monospace"/>
        <TextView
            android:id="@+id/text_cooldown_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:typeface="monospace"/>
    </LinearLayout>
</LinearLayout>